// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id           String  @id @default(uuid()) @db.VarChar(255)
  email        String?
  password     String?
  githubId     String
  refreshToken String?
  Status       Status  @default(ACTIVE)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  Profile Profile?
}

model Profile {
  id     String  @id @default(uuid()) @db.VarChar(255)
  name   String
  fileId String?
  File   File?   @relation(fields: [fileId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  moodId String?
  Mood   Mood?   @relation(fields: [moodId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String  @unique
  User   User    @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  Status Status  @default(ACTIVE)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Mood {
  id     String @id @default(uuid()) @db.VarChar(255)
  name   String
  color  String
  Status Status @default(ACTIVE)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  Profile   Profile[]
}

model File {
  id     String @id @default(uuid()) @db.VarChar(255)
  name   String
  path   String
  Status Status @default(ACTIVE)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  Profile   Profile[]
}

enum Status {
  ACTIVE
  DELETED
}
