//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String
  password String
  githubId String [not null]
  refreshToken String
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Profile Profile
}

Table Profile {
  id String [pk]
  name String [not null]
  fileId String
  File File
  moodId String
  Mood Mood
  userId String [unique, not null]
  User User [not null]
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Mood {
  id String [pk]
  name String [not null]
  color String [not null]
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Profile Profile [not null]
}

Table File {
  id String [pk]
  name String [not null]
  path String [not null]
  Status Status [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Profile Profile [not null]
}

Enum Status {
  ACTIVE
  DELETED
}

Ref: Profile.fileId > File.id [delete: Cascade]

Ref: Profile.moodId > Mood.id [delete: Cascade]

Ref: Profile.userId - User.id [delete: Cascade]